@@ -1,4 +1,6 @@
+
 13 March 2013
++ Add multiple_mmap_sizes test
 + Add hw_sw_mix test
 
 29 January 2013
